--- a/double-rosaries/double-rosaries.csproj
+++ b/double-rosaries/double-rosaries.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <AssemblyName>com.blueraja.double_rosaries</AssemblyName>
     <Product>Double Rosaries</Product>
-    <Version>1.1.0</Version>
+    <Version>1.2.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <RestoreAdditionalProjectSources>
@@ -29,6 +29,9 @@
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\..\XboxGames\Hollow Knight- Silksong\Content\Hollow Knight Silksong_Data\Managed\Assembly-CSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="PlayMaker">
+      <HintPath>..\..\..\..\XboxGames\Hollow Knight- Silksong\Content\Hollow Knight Silksong_Data\Managed\PlayMaker.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
